--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>トップ - 常川研究室</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content="" />
+</head>
+<body>
+  <h1>常川研究室（予定地）</h1>
+  <p>常川研究室のウェブサイトとなる予定です。</p>
+</body>
+</html>
